--- a/Evaluation/configs/eval/run3.yaml
+++ b/Evaluation/configs/eval/run3.yaml
@@ -12,22 +12,21 @@ run_id: ???
 # phase space region
 vs_type: ??? # jet/e/mu
 dataset_alias: ??? # alias to reference a mixture of input_samples below, e.g. tau_DY_jet_TT
-pt_bins: [[20, 100], [100, 1000]]
-eta_bins: [[0, 2.5]]
+pt_bins: [[20, 100], [100, 1000],]
+eta_bins: [[0, 2.3], [2.3, 2.5]]
 dm_bins: [[0, 1, 2, 10, 11]]
 
 # selection
-input_branches: [ 'tau_pt', 'tau_eta', 'tau_decayMode' , 'tau_dz'] # add here WP branches if necessary 
+input_branches: [ 'tau_pt', 'tau_eta', 'tau_decayMode' , 'tau_dz',  'tau_byDeepTau2018v2p5VSmuraw', 'tau_byDeepTau2018v2p5VSjetraw'] # add here WP branches if necessary 
 cuts: "(${apply_dm_cuts}) and (abs(tau_dz) < 0.2)" 
 WPs_to_require: null # null to not apply WP as selection
 # WPs_to_require: ### example for vs. jet
-#   e: VVVLoose
-#   mu: VLoose
+#   jet : Tight
 
 # inputs/paths
 input_samples: # "sample_alias": [list of strings with tau types to be selected]
-  ???: ['tau']
-  ???: ["${vs_type}"]
+  WToTauNu_M-20_v3: ['tau']
+  DYJetsToLL_M-50-madgraphMLM_v3: ['e']
 path_to_input: null
 path_to_pred: '${path_to_mlflow}/${experiment_id}/${run_id}/artifacts/predictions/{sample_alias}/*_pred.h5'
 path_to_target: '${path_to_mlflow}/${experiment_id}/${run_id}/artifacts/predictions/{sample_alias}/*_pred.h5'
